force-app/main/default/objects/Teams__c/Teams__c.object-meta.xml
<CustomObject>
    <label>Teams</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Team ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>