force-app/main/default/objects/Teams__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>Approved Date is updated when Invitation_Status__c value changed to &apos;Approved&apos;</description>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>