force-app/main/default/objects/Teams__c/fields/Approved_Rejected_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_Status_Message__c</fullName>
    <label>Approved/Rejected Status Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>