force-app/main/default/objects/Teams__c/fields/BOR_AS_Sub_ID__c.field-meta.xml
<CustomField>
    <fullName>BOR_AS_Sub_ID__c</fullName>
    <label>BOR/AS Sub ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>