force-app/main/default/objects/Teams__c/fields/Bright_Team_Key__c.field-meta.xml
<CustomField>
    <fullName>Bright_Team_Key__c</fullName>
    <externalId>true</externalId>
    <label>Bright Team Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>