force-app/main/default/objects/Teams__c/fields/Broker_Approval_Link_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Broker_Approval_Link_Expiry_Date__c</fullName>
    <formula>Requested_Date__c + 13</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Approval Link Expiry Date</label>
    <type>DateTime</type>
</CustomField>