force-app/main/default/objects/Teams__c/fields/Disband_Date__c.field-meta.xml
<CustomField>
    <fullName>Disband_Date__c</fullName>
    <label>Disband Date</label>
    <type>Date</type>
</CustomField>