force-app/main/default/objects/Teams__c/fields/Disbanded_By__c.field-meta.xml
<CustomField>
    <fullName>Disbanded_By__c</fullName>
    <label>Disbanded By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>