force-app/main/default/objects/Teams__c/fields/Disbanded_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Disbanded_By_Name__c</fullName>
    <label>Disbanded By Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>