force-app/main/default/objects/Teams__c/fields/Invitation_Status__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Status__c</fullName>
    <label>Invitation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>