force-app/main/default/objects/Teams__c/fields/Last_Modified_Date_for_Requested__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_for_Requested__c</fullName>
    <label>Last Modified Date for Requested</label>
    <type>DateTime</type>
</CustomField>