force-app/main/default/objects/Teams__c/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <label>Member Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>