force-app/main/default/objects/Teams__c/fields/Next_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Renewal_Date__c</fullName>
    <label>Next Renewal Date</label>
    <length>15</length>
    <type>Text</type>
</CustomField>