force-app/main/default/objects/Teams__c/fields/Remainder_Email__c.field-meta.xml
<CustomField>
    <fullName>Remainder_Email__c</fullName>
    <label>Reminder Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7 Day Reminder</fullName>
            </value>
            <value>
                <fullName>11 Day Reminder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>