force-app/main/default/objects/Teams__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <label>Requested Date</label>
    <type>DateTime</type>
</CustomField>