force-app/main/default/objects/Teams__c/fields/Requester_MemberMlsId__c.field-meta.xml
<CustomField>
    <fullName>Requester_MemberMlsId__c</fullName>
    <description>The Team Leader</description>
    <label>Requester MemberMlsId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>