force-app/main/default/objects/Teams__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Disband</fullName>
            </value>
            <value>
                <fullName>Broker Disband</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>