force-app/main/default/objects/Teams__c/fields/Syndicate_Listings_As_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Syndicate_Listings_As_Team_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dynamo DB will pass true or false to the field in the payload</description>
    <label>Syndicate Listings As Team Lead</label>
    <type>Checkbox</type>
</CustomField>