force-app/main/default/objects/Teams__c/fields/Team_Lead_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_First_Name__c</fullName>
    <label>Team Lead First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>