force-app/main/default/objects/Teams__c/fields/Team_Option__c.field-meta.xml
<CustomField>
    <fullName>Team_Option__c</fullName>
    <label>Team Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>