force-app/main/default/objects/Teams__c/fields/Team_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Team_Request_ID__c</fullName>
    <externalId>true</externalId>
    <label>Team Request ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>