force-app/main/default/objects/Teams__c/fields/Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Date__c</fullName>
    <label>Updated Date</label>
    <type>DateTime</type>
</CustomField>