force-app/main/default/objects/Teams__c/validationRules/Team_Name_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Team_Name_Validation_Rule</fullName>
    <active>false</active>
    <description>Team Name should not exceed 50 characters.</description>
    <errorConditionFormula>LEN( Name ) &gt; 50</errorConditionFormula>
    <errorDisplayField>Approved_Rejected_Status_Message__c</errorDisplayField>
    <errorMessage>Team Name should not exceed 50 characters.</errorMessage>
</ValidationRule>