force-app/main/default/objects/Teams__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Team_Option__c</columns>
    <columns>NAME</columns>
    <columns>Team_Name__c</columns>
    <columns>Office_ID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Requested_Date__c</columns>
    <columns>Invitation_Status__c</columns>
    <columns>Team_Lead__c</columns>
    <columns>Team_Lead_Sub_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>Status_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Teams__c.Team</value>
    </filters>
    <label>All</label>
</ListView>